Edit Cargo.toml to include requirements to publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "sphere_pack_from_json"
+description = "A binary used to simulate sphere packing with varying discrete proportions of different sphere sizes"
+license-file = "LICENSE"
 version = "0.1.0"
 authors = ["Jay Hilton"]
 edition = "2018"
