--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 clap = "~2.27.0"
 nalgebra = "0.24.1"
-rand = "0.8.3"  # using old version because spherical-cow uses old version
+rand = "0.8.3"
 serde_json = "1.0.62"
 thiserror = "1.0.23"
 serde = { version = "1.0", features = ["derive"] }
